@@ -43,15 +43,6 @@ static btree_t btree;
 static bmap_t bmap;
 static bmaprev_t bmaprev;
 
-/*void btree_init(int root)
-{
-  btree.clear();
-  boost::add_vertex(btree);
-  bmap[0] = root;
-  bmaprev[root] = 0;
-std::cout << "Created btree with root " << r << "\n"; std::cout.flush();
-}*/
-
 void btree_clear_subtree(btree_t::vertex_descriptor v)
 {
   btree[v].first.clear();
@@ -63,13 +54,13 @@ void btree_clear_subtree(btree_t::vertex_descriptor v)
 
 void btree_clear(void)
 {
-  //std::cout << "Clearing.\n"; std::cout.flush();
+  // std::cout << "Clearing.\n"; std::cout.flush();
   btree_clear_subtree(0);
 }
 
 void btree_add_child(short parent, short child)
 {
-  //std::cout << "Adding child " << child << " at parent " << parent << "\n"; std::cout.flush();
+  // std::cout << "Adding child " << child << " at parent " << parent << "\n"; std::cout.flush();
 
   if(!boost::num_vertices(btree))
     {
@@ -109,7 +100,7 @@ short btree_lowest_common_ancestor(short a, short b)
 
 void btree_add_symbol(struct symbol *s)
 {
-  //std::cout << "Adding symbol " << s->name << " at " << s->block << "\n";
+  // std::cout << "Adding symbol " << s->name << " at " << s->block << "\n";
   wassert(s);
   wassert(bmap.find(s->block) != bmap.end());
   wassert(bmap[s->block] < boost::num_vertices(btree));
@@ -117,7 +108,7 @@ void btree_add_symbol(struct symbol *s)
 }
 
 static void btree_alloc_subtree(btree_t::vertex_descriptor v, int sPtr, int cssize, int *ssize)
-{//std::cout << "Here2 at " << v << " / " << bmaprev[v] << "\n"; std::cout.flush();
+{
   std::set<symbol *>::iterator s, s_end;
   wassert(v < boost::num_vertices(btree));
   for(s = btree[v].first.begin(), s_end = btree[v].first.end(); s != s_end; ++s)
@@ -125,7 +116,7 @@ static void btree_alloc_subtree(btree_t::vertex_descriptor v, int sPtr, int cssi
       struct symbol *const sym = *s;
       const int size = getSize (sym->type);
       
-      //std::cout << "Allocating symbol " << sym->name << " (" << v << ") to " << sPtr << "\n";
+      // std::cout << "Allocating symbol " << sym->name << " (" << v << ") to " << sPtr << "\n";
       
       if(port->stack.direction > 0)
         {
