@@ -1,3 +1,9 @@
+2012-12-14 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCbtree.cc,
+	  src/SDCCast.c:
+	  Fixes for block-based stack allocation.
+
 2012-12-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCC.y
